--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,9 @@
-body{
-margin: 0;
-text-align: center;
-font-family: 'ariel', sans-serif;
+body {
+  color: #40514E;
+  margin: 0;
+  text-align: center;
+  font-family: 'ariel', sans-serif;
 }
-
 
 h1 {
   margin: 0;
@@ -13,7 +13,6 @@ h1 {
   position: relative;
   top: 50px;
   color: #66BFBF;
-
 }
 
 h2 {
@@ -22,104 +21,132 @@ h2 {
   color: #66BFBF;
   font-weight: normal;
   margin-bottom: 0;
-
 }
 
-h3{
+h3 {
   color: #11999E;
-
+  font-size: 1.5rem;
 }
 
 a {
-color: #11999E;
+  color: #11999E;
 }
 
-hr{
-width: 70px;
-border-width: 8px;
-border-style: none;
-border-top-style: dotted;
-border-color: lightgrey;
+hr {
+  width: 70px;
+  border-width: 8px;
+  border-style: none;
+  border-top-style: dotted;
+  border-color: lightgrey;
 }
 
+P {
+  font-family: 'proxima-nova', sans-serif;
+font-style: normal;
+font-weight: 100;
+line-height: 2;
+font-size: 1.3rem;
+}
+.intro{
+  width: 30%;
+  margin: 20px auto;
+}
 .skills-img {
   width: 15%;
   float: left;
   margin-right: 30px;
 }
 
-.pclass {
-text-align: left;
-line-height: 2;
+.skills-img2 {
+  width: 15%;
+  float: right;
+  margin-left: 30px;
 }
+
+.pclass {
+  text-align: left;
+}
+
 .profile-pic {
-width: 15%;
+  width: 300px;
 }
 
 .top-container {
-background-color: #d4f4fc;
+  background-color: #d4f4fc;
+  padding-top: 100px;
 }
 
 .middle-container {
-margin-top: 30px;
+  margin-top: 30px;
 }
 
-
-.top-clown{
+.top-clown {
   margin-top: 50px;
   position: absolute;
   right: 30%;
 }
-.down-clown{
-position: relative;
-right:150px;
+
+.down-clown {
+  position: relative;
+  right: 15%;
 }
-.skills{
+
+.skills {
   text-align: center;
 }
+
 .skill-row {
-width: 50%;
-margin:30px auto 100px auto;
+  width: 50%;
+  margin: 30px auto 50px auto;
 }
 
-.bottom-container{
-background-color: #66BFBF;
-padding: 50px 0;
-margin-top: 20px;
-
+.bottom-container {
+  background-color: #66BFBF;
+  padding: 50px 0;
+  margin-top: 20px;
 }
 
 .footer-link {
   color: #11999E;
   font-size: 1.3rem;
-  margin:0 10px;
+  margin: 0 10px;
+  text-decoration: none;
+}
+
+.footer-link:hover{
+
+  color: #0a6e4b;
 }
 
 .copyright {
   color: #EAF6F6;
+  font-size: 0.75rem;
+  padding-top: 20px;
 }
+
 .btn {
-  background: #11cdd4;
-  background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
-  background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
-  background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
-  background-image: -o-linear-gradient(top, #11cdd4, #11999e);
-  background-image: linear-gradient(to bottom, #11cdd4, #11999e);
-  -webkit-border-radius: 8;
-  -moz-border-radius: 8;
-  border-radius: 8px;
-  color: #ffffff;
+  background: #028ba3;
+  background-image: -webkit-linear-gradient(top, #028ba3, #02b4ba);
+  background-image: -moz-linear-gradient(top, #028ba3, #02b4ba);
+  background-image: -ms-linear-gradient(top, #028ba3, #02b4ba);
+  background-image: -o-linear-gradient(top, #028ba3, #02b4ba);
+  background-image: linear-gradient(to bottom, #028ba3, #02b4ba);
+  -webkit-border-radius: 5;
+  -moz-border-radius: 5;
+  border-radius: 5px;
+
+  color: #4f464f;
   font-size: 20px;
   padding: 10px 20px 10px 20px;
   text-decoration: none;
 }
 
 .btn:hover {
-  background: #11999e;
-  background-image: -webkit-linear-gradient(top, #11999e, #2bc4ad);
-  background-image: -moz-linear-gradient(top, #11999e, #2bc4ad);
-  background-image: -ms-linear-gradient(top, #11999e, #2bc4ad);
-  background-image: -o-linear-gradient(top, #11999e, #2bc4ad);
-  background-image: linear-gradient(to bottom, #11999e, #2bc4ad);
+  background: #006c7d;
+  background-image: -webkit-linear-gradient(top, #006c7d, #008599);
+  background-image: -moz-linear-gradient(top, #006c7d, #008599);
+  background-image: -ms-linear-gradient(top, #006c7d, #008599);
+  background-image: -o-linear-gradient(top, #006c7d, #008599);
+  background-image: linear-gradient(to bottom, #006c7d, #008599);
   text-decoration: none;
 }
