--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,13 @@ font-weight: 100;
 line-height: 2;
 font-size: 1.3rem;
 }
+
+
+
+.h3skill {
+display: inline;
+}
+
 .intro{
   width: 30%;
   margin: 20px auto;
@@ -54,13 +61,13 @@ font-size: 1.3rem;
 .skills-img {
   width: 15%;
   float: left;
-  margin-right: 30px;
+  margin-right: 70px;
 }
 
 .skills-img2 {
   width: 15%;
   float: right;
-  margin-left: 30px;
+  margin-left: 70px;
 }
 
 .pclass {
@@ -98,6 +105,7 @@ font-size: 1.3rem;
 .skill-row {
   width: 50%;
   margin: 30px auto 50px auto;
+  text-align: left;
 }
 
 .bottom-container {
