--- a/css/styles.css
+++ b/css/styles.css
@@ -126,8 +126,13 @@ P {
 
 .copyright {
   color: #EAF6F6;
-  font-size: 0.75rem;
-  padding-top: 20px;
+  font-size: 0.85rem;
+  padding-top: 15px;
+}
+
+.navbar-logo{
+
+  border-radius: 10px;
 }
 
 .btn {
@@ -209,7 +214,7 @@ h3{
     font-size: 10vw;
 }
   h2 {
-    font-size: 25vw;
+    font-size: 15vw;
   }
 
   p {
@@ -221,4 +226,18 @@ h3{
   .intro {
     width: 95%;
   }
+
+  .navbar-logo{
+  width: 80px;
+  }
+
+  .navbar-toggler-icon
+{
+  width: 60px;
+  height: 60px;
+}
+
+.bottom-container{
+  padding-bottom: 150px;
+}
 }
